--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ padding: auto;
 <body>
 <div class= "h">
 <p>Compre Plantas</p>
+<p style= "background-color: white; padding: 3rem;"></p>
 <p style= "background-color: light-green;"> Isto é somente um teste</p>
 </div>
 </body>
