--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -569,6 +571,11 @@ body {
   width: 25%;
 }
 
+.columnS1 {
+  float: left;
+  width: 25%;
+}
+
 /* The Modal (background) */
 .modalS {
   display: none; 
@@ -837,7 +844,7 @@ body {
 @keyframes typinD {
   from { width: 0 }
   to { width: 100% }
-  to{width:100%;}
+  to{width:120%;}
 }
 
 @keyframes typinD {
@@ -853,17 +860,17 @@ body {
 
 @keyframes typing {
   from { width: 0 }
-  to { width: 100% }
-  to{width:100%;}
+  to { width: 120% }
+  to{width:120%;}
 }
 
 @keyframes typing {
   0% { width: 0% }
   5% { width: 50% }
-  10% { width: 100% }
-  40% { width: 100% }
-  50% { width: 100% }
-  100% { width: 100% }
+  10% { width: 110% }
+  40% { width: 110% }
+  50% { width: 110% }
+  100% { width: 110% }
 }
 
 @keyframes typingB {
@@ -871,35 +878,35 @@ body {
   5% { width: 0% }
   10% { width: 0% }
   15% { width: 50% }
-  20% { width: 100% }
-  100% { width: 100% }
+  20% { width: 110% }
+  100% { width: 110% }
 }
 
 @keyframes typingC {
   0% { width: 0% }
   20% { width: 0% }
   25% { width: 50% }
-  30% { width: 100% }
-  50% { width: 100% }
-  100% { width: 100% }
+  30% { width: 110% }
+  50% { width: 110% }
+  100% { width: 110% }
 }
 
 @keyframes typingD {
   0% { width: 0% }
   30% { width: 0% }
   35% { width: 50% }
-  40% { width: 100% }
-  50% { width: 100% }
-  100% { width: 100% }
+  40% { width: 110% }
+  50% { width: 110% }
+  100% { width: 110% }
 }
 
 @keyframes typingE {
   0% { width: 0% }
   40% { width: 0% }
   45% { width: 50% }
-  50% { width: 100% }
-  100% { width: 100% }
-  100% { width: 100% }
+  50% { width: 110% }
+  100% { width: 110% }
+  100% { width: 110% }
 }
 
 @keyframes typingF {
@@ -1642,16 +1649,34 @@ body {
 /* Sidebar/left column */
 .side {
   flex: 30%;
-  background-color: #f1f1f1;
+  background-color: #0000;
   padding: 20px;
 }
 
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
+
+.side2 {
+  flex: 30%;
+  background-color: #0000;
   padding: 20px;
 }
+
+
+
+/* Main column */
+.main {
+  flex: 40%;
+  background-color: #0000;
+  padding: 20px;
+}
+
+
+
+.mainC {
+  flex: 33%;
+  background-color: #0000;
+  padding: 20px;
+}
+
 
 /* Fake image, just for this example */
 .fakeimg {
@@ -1695,6 +1720,20 @@ body {
 
 img {
     pointer-events: none;
+}
+
+
+
+@media screen and (min-width: 601px) {
+  .f {
+     font-size: 4rem;
+  }
+ }
+
+@media screen and (max-width: 600px) {
+  .f {
+    font-size: 2.8rem;
+  }
 }
 </style>
 
@@ -1895,19 +1934,22 @@ img {
 
 
  
-<div class="sc" style="margin-top:-58rem;"> 
+<div class="sc row" style="margin-top:-58rem;"> 
+<div class="side"></div>
 
-
- <div class="w3-content w3-section" style="max-width:px">
+ <div class="w3-content w3-section main" style="max-width:px">
+<div class="mySlides w3-animate-fading an ">
+  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/zjqwj5z4k2g6gdv4lwsqh/VioB1.png?rlkey=hl6ke91mc2q24wvfcfap3ysm5&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color:#548B2D ;"></p></div>
 <div class="mySlides w3-animate-fading an">
-  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/9ap961gnlgopvxem6zh00/Tuc4-1.png?rlkey=2hqhsy88um9u14ogqja8qq65y&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color:#548B2D ;"></p></div>
+  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/7d63eixml83nfqx7ygsxq/VioB2.png?rlkey=wkqkwobntmaa023fsyfvuqnmo&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color:#548B2D ;"></p></div>
 <div class="mySlides w3-animate-fading an">
-  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/ahpd409r0r7xgj7u4tik9/Tuc6.png?rlkey=mk1r3w6cdebaic0u1armlogup&dl=0&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color:#548B2D ;"></p></div>
+  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/muo49h4p556otdddambqu/Tr4.png?rlkey=u5aobk9fnodhm8mol66c850oy&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color: #548B2D;"></p></div>
 <div class="mySlides w3-animate-fading an">
-  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/zjqwj5z4k2g6gdv4lwsqh/VioB1.png?rlkey=hl6ke91mc2q24wvfcfap3ysm5&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-5rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color: #548B2D;"></p></div>
-<div class="mySlides w3-animate-fading an">
-  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/7d63eixml83nfqx7ygsxq/VioB2.png?rlkey=wkqkwobntmaa023fsyfvuqnmo&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-12rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color: white;"></p></div>
+  <img class=" w3-animate-fading" src="https://www.dropbox.com/scl/fi/6iq6fvunr9cbu5pw9lice/Tr5.png?rlkey=yufs7atvoe83ubu0wjen862sm&raw=1" alt="W3Schools.com" style="width: 100%" style="z-index:-1; width:100%"><p style="background: ; padding:rem; margin-top:-12rem;z-index:9; position: absolute; font-size: 2rem; font-weight: bold;color: white;"></p></div>
 </div>
+
+
+<div class="side2"></div>
 </div>
 
  
@@ -1968,15 +2010,15 @@ img {
 
 </div>
 
+ <div class="sc">
  
- 
-  <div class="" style="font-family: Dancing Script, sans-serif; color:#548B2D;color: #80683F;">
-<h1 class="typed"><b>Presenteie quem você ama com...</b></h1>
-<h1 class="typedB" style="color: #80683F;"><b> ...Belos Quadros!</b></h1></br>
+  <div class="f" style="font-family: Dancing Script, sans-serif; color:#548B2D;color: #80683F; font-size:;">
+<h1 class="typed"><b>Presenteie quem você ama com... &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b></h1>
+<h1 class="typedB" style="color: #80683F;"><b> ...Belos Quadros!&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b></h1></br>
 
-<p class="typedC" style="color: #80683F;"><b>Tecnica de colagem de folhas</b></p>
-<p class="typedD" style="color: #80683F;">Instrumentos, Paisagens, Frutas e flor,</p>
-<p class="typedE" style=" letter-spacing: -1.5px; color: #80683F;">Com carinho, vou presentear o meu Amor!</p> 
+<p class="typedC" style="color: #80683F;"><b>Tecnica de colagem de folhas&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b></p>
+<p class="typedD" style="color: #80683F;">Instrumentos, Paisagens, Frutas e flor,&nbsp&nbsp&nbsp&nbsp&nbsp</p>
+<p class="typedE" style=" letter-spacing: -1.5px; color: #80683F;">Com carinho, vou presentear o meu Amor!&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p> 
 <!--
 <p class="typedC" style=" text-indent: 18%; letter-spacing: -1px;"><b>Veja esta arte, que estou a pintar</b></p>
 <p class="typedD" style=" letter-spacing: -1px;">Coloquei a moldura...</p>
@@ -1986,7 +2028,7 @@ img {
 <p class="typedH">E assim com certeza felizes iremos ser!</p>
 -->
 </div>
-
+</div>
  
  
  
@@ -2006,12 +2048,11 @@ img {
   <div class="columnS flex-item-left dis flexdis" style="border-radius:rem; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);" onclick="openModal();currentSlide(4)">
     <img class="imgS2" src="https://www.dropbox.com/scl/fi/ahpd409r0r7xgj7u4tik9/Tuc6.png?rlkey=mk1r3w6cdebaic0u1armlogup&raw=1" alt="W3Schools.com" style="width:100%"  style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
-  
-</div> 
-  
+ 
   
   
-  <div class="rowS">
+  
+ 
       
         <div class="columnS flex-item-left dis" style="border-radius:rem; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);" onclick="openModal();currentSlide(5)">
     <img class="imgS2" src="https://www.dropbox.com/scl/fi/muo49h4p556otdddambqu/Tr4.png?rlkey=u5aobk9fnodhm8mol66c850oy&raw=1" alt="W3Schools.com" style="width:100%"  style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
@@ -2537,18 +2578,18 @@ img {
 
 
  
-  <div class="flex-container">
-   <div class="flex-item-left">
+  <div class="row">
+   <div class="flex-item-left mainC">
       <img src="https://www.dropbox.com/scl/fi/zjqwj5z4k2g6gdv4lwsqh/VioB1.png?rlkey=hl6ke91mc2q24wvfcfap3ysm5&raw=1" alt="W3Schools.com" style="width: 100%">
   </div>
-  <div class="flex-item-right"> <img src="https://www.dropbox.com/scl/fi/9ap961gnlgopvxem6zh00/Tuc4-1.png?rlkey=2hqhsy88um9u14ogqja8qq65y&raw=1" alt="W3Schools.com" style="width: 100%"></div>
+  <div class="flex-item-right mainC"> <img src="https://www.dropbox.com/scl/fi/9ap961gnlgopvxem6zh00/Tuc4-1.png?rlkey=2hqhsy88um9u14ogqja8qq65y&raw=1" alt="W3Schools.com" style="width: 100%"></div>
   
-    <div class="flex-item-left">
+    <div class="flex-item-left mainC">
       <img src="https://www.dropbox.com/scl/fi/muo49h4p556otdddambqu/Tr4.png?rlkey=u5aobk9fnodhm8mol66c850oy&raw=1" alt="W3Schools.com" style="width: 100%">
   </div>
   
   
-    <div class="flex-item-right"> <img src="https://www.dropbox.com/scl/fi/17zrop30tiqrng13amlzc/Vio8.png?rlkey=jzpn6a1iqz2u2dn1ofjoswh3l&raw=1" alt="W3Schools.com" style="width: 100%"></div>
+    <div class="flex-item-right mainC"> <img src="https://www.dropbox.com/scl/fi/17zrop30tiqrng13amlzc/Vio8.png?rlkey=jzpn6a1iqz2u2dn1ofjoswh3l&raw=1" alt="W3Schools.com" style="width: 100%"></div>
 </div>
 
 <!--
@@ -2794,12 +2835,15 @@ img {
 
 <!--<h1>Folhas</h1>-->
 
-<p class="typed">Quadros feitos manualmente,</p>
-<p class="typedB">na tecnica mista de pintura</p>
-<p class="typedC">e colagem de folhas secas.</p>
+<div class="f">
+
+<p class="typed">Quadros feitos manualmente,&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p>
+<p class="typedB">na tecnica mista de pintura&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p>
+<p class="typedC">e colagem de folhas secas.&nbsp&nbsp&nbsp&nbsp&nbsp</p>
+<p class="typedD">Quadros feitos por encomenda.&nbsp&nbsp&nbsp&nbsp&nbsp</p>
 
 
-
+</div>
 
 <div class="flex-container">
   <div class="flex-item-left">
