--- a/index.html
+++ b/index.html
@@ -2635,7 +2635,7 @@ img {
 -->
 
 <h1></h1>
-
+<p style="text-align:left; width:rem; font-size:2rem; margin-top:5rem; color:#80683F;">Toque nas imagens acima</p>
 
 
  
