--- a/index.html
+++ b/index.html
@@ -2047,8 +2047,8 @@ img {
       <p class="na1" onclick="openModal();currentSlide(1)">Violino1</p>
     <p class="na1" onclick="openModal();currentSlide(5)">Violino2</p>
     <p class="na1" onclick="openModal();currentSlide(7)">Violino3</p>
-    ();currentSlide(5)">Violino4</p>
-    <p class="na1" onclick="openModal();currentSlide(13)">Violino3</p>
+    
+    <p class="na1" onclick="openModal();currentSlide(13)">Violino/Cisne</p>
     
   
   
