--- a/index.html
+++ b/index.html
@@ -3224,7 +3224,7 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
-<script>
+<script>  /*
 function openModal() {
   document.getElementById("myModalS").style.display = "block";
 }
@@ -3302,9 +3302,48 @@ function showSlides1(m) {
   dots[slideIndex-1].className += " activeS";
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
-
+*/
 </script>
 
+
+
+<script>
+
+function openModal() {
+  document.getElementById("myModalS").style.display = "block";
+}
+
+function closeModal() {
+  document.getElementById("myModalS").style.display = "none";
+}
+
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlidesS");
+  let dots = document.getElementsByClassName("demoS");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" activeS", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " activeS";
+}
+</script>
 
 
 
